--- a/source/repos/SalesWebMVC/SalesWebMVC/Views/Sellers/Index.cshtml
+++ b/source/repos/SalesWebMVC/SalesWebMVC/Views/Sellers/Index.cshtml
@@ -5,7 +5,9 @@
 
 <h2>@ViewData["Title"]</h2>
    
-
+<p>
+    <a asp-action="Create" class="btn btn-sm btn-primary">Create New</a>
+</p>
 <table class="table table-striped table-hover" >
     <thead>
         <tr class="bg-primary">
