--- a/source/repos/SalesWebMVC/SalesWebMVC/Views/Sellers/Edit.cshtml
+++ b/source/repos/SalesWebMVC/SalesWebMVC/Views/Sellers/Edit.cshtml
@@ -1,14 +1,15 @@
 ﻿@model SalesWebMVC.Models.ViewModels.SellerFormViewModel;
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Edit";
 }
 
 <h2>@ViewData["Title"]</h2>
 
-<h4>New Seller</h4>
+<h4>Edit Seller</h4>
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Create">
+        <form asp-action="Edit">
+            <input type="hidden" asp-for="Seller.Id" />
             <div class="form-group">
                 <label asp-for="Seller.Name" class="control-label"></label>
                 <input asp-for="Seller.Name" class="form-control" />
@@ -27,10 +28,10 @@
             </div>
             <div class="form-group">
                 <label asp-for="Seller.DepartmentId" class="control-label"></label>
-                <select asp-for="Seller.DepartmentId" asp-items ="@(new SelectList(Model.Departments,"Id", "Name"))" class="form-control"></select>
+                <select asp-for="Seller.DepartmentId" asp-items="@(new SelectList(Model.Departments,"Id", "Name"))" class="form-control"></select>
             </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-info btn-sm" />
+                <input type="submit" value="Save" class="btn btn-info btn-sm" />
             </div>
         </form>
     </div>
