Implementing Grouping Search

--- a/source/repos/SalesWebMVC/SalesWebMVC/Views/SalesRecords/Index.cshtml
+++ b/source/repos/SalesWebMVC/SalesWebMVC/Views/SalesRecords/Index.cshtml
@@ -38,13 +38,13 @@
                 <div class="form-group">
                     <label for="minDate" class="col-lg-2 control-label">Min Date</label>
                     <div class="col-lg-10">
-                        <input type="date" name="minDate" class="form-control" />
+                        <input type="date" name="min" class="form-control" />
                     </div>
                 </div>
                 <div class="form-group">
                     <label for="maxDate" class="col-lg-2 control-label">Max Date</label>
                     <div class="col-lg-10">
-                        <input type="date" name="maxDate" class="form-control" />
+                        <input type="date" name="max" class="form-control" />
                     </div>
                 </div>
                 <div class="form-group">
